Sonar fixes for major smells